--- a/style.css
+++ b/style.css
@@ -1,54 +1,74 @@
 
-h1 {font: 70px serif; 
-	color: #454137;
-	opacity: 0.9;
-	text-align: center;
+body {
+	color: black;
+	font-family: Helvetica;
+	background: url(images/office.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-color:#433015;
+
 }
 
-h2 {font: 50px serif;
+h1 {
+	font: 47px serif; 
+	text-align: center;
+	padding-bottom: 40px;
+	padding-left: 270px;
+}
+
+#main {
+	padding-left: 60px;
+}
+
+h2 {
+	font: 50px serif;
 	text-align: center;
 	padding-top: 70px;
 	padding-bottom: 30px;
 
 }
 
-h3 {font: 40px serif;
+h3 {
+	font: 40px serif;
 	text-align: center;
 	padding-top: 60px;
 	padding-bottom: 20px;
 
 }
 
-h4 {font-size: 30px;
+h4 {
+	font-size: 30px;
 }
 
 
 
-.imgsign { text-align: left;
-	padding-bottom: 50px;
+.imgsign { 
+	font-size: 20px;
+	color: black;
+	margin-left: 30px;
+	vertical-align: 250px;
+
 }
  
 
-	figcaption {text-align: center;
-	
-	}
 
 
-.link {font-size: 20px;
-	font-weight: 500;
-	color: #2A38D7;
-	padding-top: 50px;
-
-
-}
-
-table, tr, td {border: 1px solid black;
+table, tr, td {
+	border: 1px solid black;
 	font-size: 18px;
 	padding: 5px 7px 5px 7px;
 	text-align: center;
 
-	
+
+
 }
+
+a {
+	color: #1D3562;
+}
+
 
 ul.a {
 	list-style-type: circle;
@@ -69,11 +89,11 @@ ul.a {
 	font-weight: 500;
 	background-color: #DADCDC;
 	border: 1px solid #393939;
-	margin: 15px auto 30px auto; 
+	margin: 15px 300px 30px auto; 
 	padding-top: 15px;
 	padding-left: 5px;
 	border-radius: 30px;
-	opacity: 0.7;
+	opacity: 0.6;
 	box-shadow: -20px 20px 10px #000000;
 	height: 30px;
 	width: 400px;
@@ -82,65 +102,68 @@ ul.a {
 	text-decoration: none;	
 }
 
-.htmlpage {opacity: 0.9;
+.message:hover {
+
+	border: 3px solid #393939;
+	opacity: 0.8;
+	transform: rotate(1deg);
+	transition: 0.4s all;
+	width: 420px;
+}
+
+.message:active {
+	opacity: 0.4;
+	transition: 0.1s all;
+}
+
+.htmlpage {opacity: 0.8;
 	width: 420px;
 
 }
-.csspage {opacity: 0.9;
+.csspage {opacity: 0.8;
 	width: 420px;
 
 }
-.bootstrappage {opacity: 0.9;
+.bootstrappage {opacity: 0.8;
 	width: 420px;
 
 }
-.javascriptpage {opacity: 0.9;
+.javascriptpage {opacity: 0.8;
 	width: 420px;
 
 }
-.angularpage {opacity: 0.9;
+.angularpage {opacity: 0.7;
 	width: 420px;
 
 }
 
 .boot {
-	background: #6F0CAD;
+	background: #330C73;
 	color: #ffffff;
 }
 
 .js {
-	background: #E0DD2C;
-	color: #000000;
+	background: #6E6E00;
+	color: #ffffff;
 }
 
 .angular {
-	background: red;
+	background: #7E0000;
 	color: #ffffff;
 }
 
 .css {
-	background: #2C82E0;
+	background: #134A8A;
 	color: #ffffff;
 }
 
 .html {
 	margin-top: 30px;
-	background: #E37E16;
-	color: black;
+	background: #AF5D09;
+	color: white;
 }
 
-.message:hover {
 
-	border: 3px solid #393939;
-	opacity: 0.9;
-	transform: rotate(1deg);
-	transition: 1s all;
-	width: 420px;
-}
-
-body {
-	background: url(images/wood2.png);
-}
 
 .button {
  background-color: #607180;
@@ -154,14 +177,27 @@ body {
   margin: 4px 2px;
   cursor: pointer;
   opacity: 0.6;
+  outline: none;
 }
 
 .button:hover {
 	opacity: 0.9;
-	transition: 0.6s;
+	transition: 0.4s;
 }
+ 
+ .button:active {
+ 	opacity: 0.4;
+	transition: 0.2s;
+ }
 
 #table {margin-left: 20px;
 	margin-bottom: 80px;
+
+}
+
+img {width: 300;
+	border: 0;
+	margin-bottom: 50px;
+	margin-left: 40px;
 
 }
